# hduhmddxy-control-train

./: LICENSE  README.md
Chapter1_基本控制算法-PID/: CMakeLists.txt  README.md
Chapter1_基本控制算法-PID/src/: FuzzyPID.cpp  FuzzyPID.h  PID.c  PID.h  pso.cpp  pso.h
Chapter1_基本控制算法-PID/参考资料/atuotune/: AutoTune.c  PosControl.c
Chapter1_基本控制算法-PID/参考资料/fuzzypid_c/: fuzzypid.c  fuzzypid.h
Chapter1_基本控制算法-PID/参考资料/sliding_mode/: sliding_mode.cpp  sliding_mode_pso.cpp
Chapter2_配置ubuntu系统/: READEME.md  README.md  git.txt  opencv_install.md  source.txt  wsl.md
Chapter2_配置ubuntu系统/ros2CV_ws/src/: README.md  image_pub.sh  image_sub_big.sh  image_sub_small.sh  ros2_gazebo_yolo.sh  ssh.sh  ssh_small.sh
Chapter2_配置ubuntu系统/ros2CV_ws/src/getEngine/: CMakeLists.txt
Chapter2_配置ubuntu系统/ros2CV_ws/src/getEngine/include/: calibrator.h  config.h  model.h
Chapter2_配置ubuntu系统/ros2CV_ws/src/getEngine/plugin/: yololayer.h
Chapter2_配置ubuntu系统/ros2CV_ws/src/getEngine/src/: main.cpp  model.cpp
Chapter2_配置ubuntu系统/ros2CV_ws/src/left/: CMakeLists.txt  package.xml
Chapter2_配置ubuntu系统/ros2CV_ws/src/left/.cache/clangd/index/: Mat2image.hpp.5EB115E25905ED4D.idx  global.hpp.CBDBF7D303F0B2F4.idx  image_base64.cpp.6D1C4728EC7ED493.idx  image_pub.cpp.800844D78D2593BF.idx  image_pub.cpp.FAA0D5CE9EA41365.idx  image_sub.cpp.28CB3832EF6B8AA6.idx  yolo.cpp.1D34A4B4BF137F0A.idx
Chapter2_配置ubuntu系统/ros2CV_ws/src/left/src/: yolo.cpp  yolo.hpp
Chapter2_配置ubuntu系统/ros2CV_ws/src/right/: CMakeLists.txt  package.xml
Chapter2_配置ubuntu系统/ros2CV_ws/src/right/.cache/clangd/index/: image_base64.hpp.93F3FD0645140C0B.idx  image_sub.cpp.854B2F5041D8D215.idx  showImage.cpp.E65B6E256CBD2166.idx  yolo.cpp.D0A88CEF04FF6FD2.idx  yolo.hpp.9C533B9E1A8B4A38.idx  yolo.hpp.FE4E88D6A3DDA433.idx
Chapter2_配置ubuntu系统/ros2CV_ws/src/right/src/: Mat2image.hpp  global.hpp  image_base64.cpp  image_sub.cpp  image_sub_gazebo.cpp  yolo.cpp  yolo.hpp
Chapter2_配置ubuntu系统/ros2CV_ws/src/ros2_interfaces/msg/: Coord.msg
Chapter2_配置ubuntu系统/ros2CV_ws/src/topic/: CMakeLists.txt
Chapter2_配置ubuntu系统/ros2CV_ws/src/topic/.cache/clangd/index/: image_base64.hpp.D493C530E8F25619.idx
Chapter2_配置ubuntu系统/ros2CV_ws/src/topic/src/: image_pub.cpp  image_sub.cpp  showImage.cpp  yolo.cpp  yolo.hpp
Chapter2_配置ubuntu系统/ros2CV_ws/src/topic2/: CMakeLists.txt
Chapter2_配置ubuntu系统/ros2CV_ws/src/topic2/.cache/clangd/index/: Mat2image.hpp.49B398D7AD74DB58.idx  global.hpp.38A27D06D80EF68E.idx  image_base64.cpp.3C1E7A04A2630A5B.idx  image_pub.cpp.FAA0D5CE9EA41365.idx  image_sub.cpp.28CB3832EF6B8AA6.idx  yolo.cpp.1D34A4B4BF137F0A.idx  yolo.hpp.9C533B9E1A8B4A38.idx
Chapter2_配置ubuntu系统/ros2CV_ws/src/topic2/src/: global.hpp  image_base64.hpp  image_pub.cpp  image_sub.cpp  yolo.cpp  yolo.hpp
Chapter2_配置ubuntu系统/ros2CV_ws/src/trtInfer/: CMakeLists.txt
Chapter2_配置ubuntu系统/ros2CV_ws/src/trtInfer/include/: config.h  logging.h
Chapter2_配置ubuntu系统/ros2CV_ws/src/trtInfer/plugin/: yololayer.cu
Chapter2_配置ubuntu系统/ros2CV_ws/src/trtInfer/src/: main.cpp  postprocess.cpp  preprocess.cu
Chapter2_配置ubuntu系统/ros2CV_ws/src/trtdet/: CMakeLists.txt  package.xml
Chapter2_配置ubuntu系统/ros2CV_ws/src/trtdet/.cache/clangd/index/: calibrator.cpp.7A5455C6DCB8E364.idx  calibrator.h.07DB2C3319E65653.idx  config.h.089424915F6C7804.idx  cuda_utils.h.3BE0929AC6DB7060.idx  image_pub.cpp.CF9ED39AE3633420.idx  image_sub.cpp.0E66CC0D23EB048B.idx  logging.h.70EC3DBD3872DD40.idx  macros.h.906AB7F19FCCE399.idx  model.cpp.EA461644B3F63784.idx  model.h.02C1280119F7560A.idx  postprocess.cpp.C98E805FD05072BC.idx  postprocess.h.0C84F1F9E3E83454.idx  preprocess.cu.9DF2403E72A13321.idx  preprocess.h.405AAE0B711E49B3.idx  showImage.cpp.D45C2A7E3206F5CC.idx  trtInfer.cpp.024DFCC4CBFB8D33.idx  trtInfer.h.75E0EDB1FE6259EC.idx  types.h.DDE7E415176DFDE3.idx  utils.h.F348AC9FFC8DE703.idx  yololayer.cu.9F7536723E26A74D.idx  yololayer.h.42656857B202CAB9.idx
Chapter2_配置ubuntu系统/ros2CV_ws/src/trtdet/include/: config.h  global.hpp  postprocess.h  trtInfer.h
Chapter2_配置ubuntu系统/ros2CV_ws/src/trtdet/src/: image_pub.cpp  image_sub.cpp  postprocess.cpp  trtInfer.cpp
Chapter3_解决方案概述&仿真环境配置-APM-SITL&Gazebo/: README.md  ardupilot.txt
Chapter3_解决方案概述&仿真环境配置-APM-SITL&Gazebo/配置mavros（ros2-humble）/: depend.sh
Chapter4_构建项目/: README.md
Chapter4_构建项目/ros2_ws/ardupilot_ws/src/ros_gz_sim_ardupilot/: CMakeLists.txt  package.xml
Chapter4_构建项目/ros2_ws/ardupilot_ws/src/ros_gz_sim_ardupilot/launch/: iris_runway.launch.py  iris_runway.launch_11.py
Chapter4_构建项目/ros2_ws/ardupilot_ws/src/ros_gz_sim_ardupilot/models/camera/: model.sdf
Chapter4_构建项目/ros2_ws/ardupilot_ws/src/ros_gz_sim_ardupilot/models/iris_with_standoffs/: model.sdf
Chapter4_构建项目/ros2_ws/ardupilot_ws/src/ros_gz_sim_ardupilot/rviz/: iris.rviz
Chapter4_构建项目/ros2_ws/ardupilot_ws/src/ros_gz_sim_ardupilot/worlds/: iris_runway.sdf  iris_runway_old.sdf
Chapter4_构建项目/script/: ardupilot.sh  ardupilot_mavros.sh  gazebo.sh  image_pub.sh  image_sub_big.sh  image_sub_gazebo_big.sh  image_sub_gazebo_small.sh  image_sub_small.sh  mavros.sh  px4.sh  ros2_colcon.sh  ros2_mavros.sh  ros2_offboard.sh  ros2_run_land.sh  sitl.sh  ssh.sh
Chapter5_学习无人机起飞代码/: 1.md  README.md
Chapter5_学习无人机起飞代码/起飞代码1/: Motors.cpp  Motors.h
Chapter5_学习无人机起飞代码/起飞代码2/: OffboardControl.cpp  OffboardControl.hpp  init.cpp  takeoff.cpp
Chapter6_编写无人机控制代码/: README.md  mavros.txt
Chapter7_准备真机实战/: README.md
考核有用的所有内容/: README.md
